Add release infrastructure
- scripts/build.sh: Multi-platform build script
- scripts/release.sh: GitHub release automation
- scripts/update-homebrew.sh: Homebrew formula updater
- install.sh: Curl pipe-to-bash installer

--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,13 @@ uploads/
 .DS_Store
 
 # Test scripts (may contain test tokens)
-scripts/
+scripts/test_*
 
 # User-created apps (contains user data)
 apps/
 
 # Go
 vendor/
+
+# Build output
+dist/
